# SmallTalk

./: .gitignore  CONTRIBUTING.md  README.md  config.agent.example.yaml  config.example.yaml  main.py  pyproject.toml
src/smalltalk/: __init__.py  app.py  cli.py  client.py  config.py  logger.py  message.py  tool_registry.py
src/smalltalk/agent/: base.py  orchestrator.py  worker.py
src/smalltalk/interface/: base.py  cli.py  discord.py  telegram.py
src/smalltalk/search/: keyword_search.py
src/smalltalk/tools/: __init__.py  datetime_tool.py
src/smalltalk/workers/: __init__.py  greeter.py
