[project]
name = "smalltalk"
version = "0.1.0"
description = "일상 생활 영역의 AI 에이전트를 소형 모델로 안전하게 재구현하는 커뮤니티 프로젝트"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "scikit-learn>=1.5",
]

[project.scripts]
smalltalk = "smalltalk.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smalltalk"]

[tool.uv.extra-build-dependencies]
smalltalk = ["hatchling"]
